# newsgraph

./: Makefile  celerybeat-schedule.db  docker-compose.yml  main.py  pyproject.toml  test_scraper.py
alembic/: env.py
alembic/versions/: 4e17c8345172_add_news_sources_and_articles_tables.py
app/: main.py
app/api/v1/: feed.py  health.py
app/connectors/: base.py  rss.py
app/core/: config.py  database.py
app/models/: __init__.py  article.py  source.py
app/schemas/: article.py
app/services/: ingestion_service.py
temp_results/: ndtv.txt  nyt_tech.txt  techcrunch.txt  the_hindu.txt  the_indian_express.txt  the_verge.txt  times_of_india.txt  wired.txt
workers/: celery_app.py
workers/tasks/: ingest.py
